# geoffrey

./: .coverage  .gitignore  404.html  README.md  coverage.xml  geoff.html  index.html  print.html  pyproject.toml
.github/workflows/: ci.yml  docs.yml
commands/: add.html  create.html
commands/add/: data_source.html  exploration.html  model.html  product.html
docs/: book.toml  geoff.md
docs/book/: 404.html  geoff.html  index.html  print.html  searchindex.js  searchindex.json
docs/book/commands/: add.html  create.html
docs/book/commands/add/: data_source.html  exploration.html  model.html  product.html
docs/commands/: create.md
docs/src/: SUMMARY.md  index.md
docs/src/commands/: add.md  create.md
docs/src/commands/add/: data_source.md
geoffrey/: _create_command.py  add.py  main.py
geoffrey/add_commands/: _add_base_command.py  _add_data_source_command.py
geoffrey/templates/data_sources/: db_metadata.md  empty_metadata.md  extract_metadata.md  metadata.md  web_metadata.md
geoffrey/templates/root/: README.md  project_scoping.md
tests/: conftest.py
tests/integration_tests/: test_add.py  test_create.py  test_geoffrey.py
tests/integration_tests/add/: test_add_data_source.py
tests/unit_tests/: test_add_base_command.py  test_add_data_source_command.py  test_create_command.py
