[tool.poetry]
name = "geoffrey"
version = "0.1.1"
description = ""
authors = ["Daniel Yates <danielyates1234@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
geoff = "geoffrey.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "22.6"
pytest-cov = "^3.0.0"
ghp-import = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
